DM-2176: Address PR comments - Fix practice card display on mobile - Fix display of categories of hidden practices

--- a/app/assets/stylesheets/dm/components/_practice_card.scss
+++ b/app/assets/stylesheets/dm/components/_practice_card.scss
@@ -58,9 +58,12 @@
 
   .dm-practice-card-container {
     height: 412px;
-    min-width: 309px;
     max-width: 309px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    @media screen and (min-width: 340px) {
+      min-width: 309px;
+    }
   }
 
   .dm-practice-card-img-container {
